syntax = "proto3";

package federation.v2dev;

import "grpc/federation/federation.proto";
import "post/post.proto";
import "user/user.proto";
import "google/protobuf/duration.proto";

option go_package = "example/federation;federation";

service FederationV2devService {
  option (grpc.federation.service) = {
    env {
      var {
        name: "a"
        type { kind: STRING }
        option {
          default: "xxx"
        }
      }
      var {
        name: "b"
        type { repeated { kind: INT64 } }
        option {
          alternate: "yyy"
        }
      }
      var {
        name: "c"
        type { map { key { kind: STRING } value { kind: DURATION } } }
        option {
          required: true
          alternate: "zzz"
        }
      }
      var {
        name: "d"
        type { kind: DOUBLE }
        option {
          ignored: true
        }
      }
    }    
  };
  rpc GetPostV2dev(GetPostV2devRequest) returns (GetPostV2devResponse) {};
}

message GetPostV2devRequest {
  string id = 1;
}

enum PostV2devType {
  POST_V2_DEV_TYPE = 0;
}

message GetPostV2devResponse {
  option (grpc.federation.message) = {
    def {
      name: "post"
      message {
        name: "PostV2dev"
        args { name: "id", by: "$.id" }
      }
    }
  };
  PostV2dev post = 1 [(grpc.federation.field).by = "post"];
  PostV2devType type = 2 [(grpc.federation.field).by = "federation.v2dev.PostV2devType.POST_V2_DEV_TYPE"];
  string env_a = 3 [(grpc.federation.field).by = "grpc.federation.env.a"];
  int64 env_b = 4 [(grpc.federation.field).by = "grpc.federation.env.b[1]"];
  google.protobuf.Duration env_c_value = 5 [(grpc.federation.field).by = "grpc.federation.env.c['z']"];
}

message PostV2dev {
  option (grpc.federation.message) = {
    def [
      {
        name: "res"
        call {
          method: "post.PostService/GetPost"
          request { field: "id", by: "$.id" }
        }
      },
      { name: "post", by: "res.post", autobind: true },
      {
        name: "user"
        message {
          name: "User"
          args { inline: "post" }
        }
      },
      {
        name: "unused"
        message {
          name: "Unused"
          args { name: "foo", by: "'foo'" }
        }
      },
      { 
        message {
          name: "ForNameless"
          args { name: "bar", by: "'bar'" }
        }
      } // without name
    ]
  };
  string id = 1;
  string title = 2;
  string content = 3;
  User user = 4 [(grpc.federation.field).custom_resolver = true];
}

message User {
  option (grpc.federation.message) = {
    def {
      name: "res"
      call {
        method: "user.UserService/GetUser"
        request { field: "id", by: "$.user_id" }
      }
    }
    def { name: "u", by: "res.user" }
    custom_resolver: true
  };
  string id = 1;
  string name = 2 [(grpc.federation.field).custom_resolver = true];
}

message Unused {
  option (grpc.federation.message).custom_resolver = true;
  string foo = 1;
}

message ForNameless {
  option (grpc.federation.message).custom_resolver = true;
  string bar = 1;
}
